--- a/css/style.css
+++ b/css/style.css
@@ -1,64 +1,69 @@
 body {
-    margin: 0;
-    font-family: Arial, sans-serif;
-    background-color: white;
-    color: #333;
+   margin: 0;
+   font-family: 'Inter', sans-serif;
+   background-color: white;
+   color: #333;
+  }
+  
+  /* Aplicar League Spartan para textos em negrito */
+  .titulo,
+  strong {
+   font-family: 'League Spartan', sans-serif;
+   font-weight: 700;
   }
   
   /* Seção azul escura */
   .perfil {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-    padding: 50px;
-    background-color: #0F2844;
-    color: white;
-    border-top: 10px solid #B08B4F;
+   display: flex;
+   justify-content: space-between;
+   align-items: flex-start;
+   padding: 50px;
+   background-color: #0F2844;
+   color: white;
+   border-top: 10px solid #B08B4F;
   }
   
   .perfil-conteudo {
-    width: 60%;
+   width: 60%;
   }
   
   .perfil h2 {
-    margin: 0;
-    font-size: 24px;
-    color: #ffffff;
+   margin: 0;
+   font-size: 24px;
+   color: #ffffff;
   }
   
   .titulo {
-    margin: 5px 0 20px;
-    font-weight: bold;
-    color: #b8c7d1;
+   margin: 5px 0 20px;
+   font-weight: bold;
+   color: #b8c7d1;
   }
   
   .descricao {
-    margin-bottom: 20px;
-    line-height: 1.6;
+   margin-bottom: 20px;
+   line-height: 1.6;
   }
   
   .experiencia li {
-    margin-bottom: 15px;
+   margin-bottom: 15px;
   }
   
   .perfil-foto {
-    width: 30%;
-    display: flex;
-    justify-content: center;
+   width: 30%;
+   display: flex;
+   justify-content: center;
   }
   
   .foto-box {
-    width: 180px;
-    height: 220px;
-    background-color: #B08B4F;    
-    box-shadow: 15px 15px 0 #e3e3e3;
+   width: 180px;
+   height: 220px;
+   background-color: #B08B4F; 
+   box-shadow: 15px 15px 0 #e3e3e3;
   }
   
   /* Faixa dourada inferior */
   .faixa-dourada {
-    height: 20px;
-    background-color: #B08B4F;
-    width: 100%;
+  height: 20px;
+   background-color: #B08B4F;
+   width: 100%;
   }
-
-  
